# bam

./: .gitignore  README.md  README_BAM_FOR_GO.md  README_BAM_FOR_GO1.md  actuator.py  model.py  pyproject.toml  simulate.py
bam/: actuator.py  model.py  plot_all.py
bam/unitree/: actuator.py  all_record.py  find_zero_offset.py  record.py  test.py
example_data/data_plots_go1/: index.html
example_data/data_processed_go1/: 2025-05-13_04h57m44.json  2025-05-13_04h57m53.json  2025-05-13_04h58m01.json  2025-05-13_04h58m09.json  2025-05-13_05h05m48.json  2025-05-13_05h05m56.json  2025-05-13_05h06m04.json  2025-05-13_05h06m12.json  2025-05-13_05h07m50.json  2025-05-13_05h07m58.json  2025-05-13_05h08m06.json  2025-05-13_05h08m15.json  2025-05-13_05h09m03.json  2025-05-13_05h09m11.json  2025-05-13_05h09m19.json  2025-05-13_05h09m27.json
example_data/data_raw_go1/: 2025-05-13_04h57m44.json  2025-05-13_04h57m53.json  2025-05-13_04h58m01.json  2025-05-13_04h58m09.json  2025-05-13_05h05m48.json  2025-05-13_05h05m56.json  2025-05-13_05h06m04.json  2025-05-13_05h06m12.json  2025-05-13_05h07m50.json  2025-05-13_05h07m58.json  2025-05-13_05h08m06.json  2025-05-13_05h08m15.json  2025-05-13_05h09m03.json  2025-05-13_05h09m11.json  2025-05-13_05h09m19.json  2025-05-13_05h09m27.json
mujoco_rig/: README.md  unitree.py
mujoco_rig/assets/rig_0_150m/: template.xml
params/unitree_go1/: m1.json
rham/: actuator.py  logs.py  model.py
wheels/: README.md
