[project]
name = "bam"
version = "0.1.0"
description = "Better Actuator Models"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "zmq",
    "protobuf==3.20",
    "numpy",
    "dynamixel_sdk",
    "optuna",
    "cmaes",
    "wandb",
    "matplotlib",
    "pygame",
    "colorama",
]
[tool.uv.pip]
find-links = ["./wheels"]
